# turncost

./: README.md
code/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
code/apx/: CMakeLists.txt  approximation.cpp  approximation.h  approximation_gtest.cpp  visualize.cpp  visualize.h
code/apx/connect/: connect.cpp  connect.h  connect_gtest.cpp
code/apx/connect/details/: component_edge.cpp  component_edge.h  component_graph.cpp  component_graph.h  component_graph_gtest.cpp  component_mst.cpp  component_mst.h  component_mst_gtest.cpp  connect_penalty_cycle_cover.cpp  connect_penalty_cycle_cover.h  connect_penalty_cycle_cover_gtest.cpp  greedy_connect.cpp  greedy_connect.h  greedy_connect_gtest.cpp  path_to_cycle.cpp  path_to_cycle.h  path_to_cycle_gtest.cpp  pcst_fast_gtest.cpp  tcg_grid_graph_wrapper.cpp  tcg_grid_graph_wrapper.h  tcg_grid_graph_wrapper_gtest.cpp
code/apx/connect/details/pcst_fast/: CMakeLists.txt
code/apx/cyclecover/orientation_matching/: orientation_matching.cpp  orientation_matching.h
code/apx/cyclecover/orientation_matching/blossom5-v205/: CMakeLists.txt
code/apx/cyclecover/orientation_matching/local_orientation_matching/: auxiliary_graph.cpp  auxiliary_graph.h  auxiliary_graph_gtest.cpp  local_matching.cpp  local_matching.h
code/apx/cyclecover/orientation_selection/: linear_program.cpp  linear_program.h  select_orientations.cpp  select_orientations.h  solution.cpp  solution.h
code/arkin-apx/: CMakeLists.txt  approximation.cpp  approximation.h  approximation_gtest.cpp
code/arkin-apx/strip_cover/: strip.cpp  strip.h  strip_cover.cpp  strip_cover.h  strip_cover_gtest.cpp  strip_extractor.cpp  strip_extractor.h  strip_extractor_gtest.cpp  strip_gtest.cpp
code/arkin-apx/strip_matching/: strip_matching_solver.cpp  strip_matching_solver.h  strip_matching_solver_gtest.cpp
code/ip/: CMakeLists.txt  integer_programming.cpp  integer_programming.h
code/ip/fc_separation/: full_coverage_gtest.cpp  full_coverage_separation_callback.cpp  full_coverage_separation_callback.h  full_coverage_simple_separator.cpp  full_coverage_simple_separator.h  full_coverage_solver.cpp  full_coverage_solver.h  full_coverage_sufficient_separator.cpp  full_coverage_sufficient_separator.h
code/ip/general_cc_solver/: ip_solver.cpp  ip_solver.h  ip_solver_cplex_base.cpp  ip_solver_cplex_base.h  ip_solver_gtest.cpp
code/ip/penalty_separation/: max_min_fields.cpp  max_min_fields.h  penalty_coverage_gtest.cpp  penalty_separation_callback.cpp  penalty_separation_callback.h  penalty_simple_separator.cpp  penalty_simple_separator.h  penalty_sufficient_separator.cpp  penalty_sufficient_separator.h  penalty_voronoi_separator.cpp  penalty_voronoi_separator.h
code/ip/subset_separation/: subset_coverage_gtest.cpp  subset_separation_callback.cpp  subset_separation_callback.h  subset_simple_separator.cpp  subset_simple_separator.h  subset_sufficient_separator.cpp  subset_sufficient_separator.h  subset_voronoi_separation.cpp  subset_voronoi_separation.h  voronoi_extender.cpp  voronoi_extender.h  voronoi_extender_gtest.cpp.cpp
code/problem_instance/: CMakeLists.txt  coordinate.cpp  coordinate.h  costs.cpp  costs.h  coverage.cpp  coverage.h  direction.cpp  direction.h  direction_gtest.cpp  grid_graph.cpp  grid_graph.h  save_and_load.cpp  save_and_load.h
code/problem_instance/solution/: integral_solution_gtest.cpp  simple_svg_1.0.0.hpp  solution.cpp  solution.h  visualization.cpp  visualization.h
code/shortest_path/: CMakeLists.txt  DFieldId.cpp  DFieldId.h  grid_graph.cpp  grid_graph.h  main.cpp  turn_cost_grid_dijkstra.cpp  turn_cost_grid_dijkstra.h  turn_cost_grid_dijkstra_gtest.cpp
code/tests/: CMakeLists.txt  gtest_main.cpp
code/tests/assets/: fc_500_dense_3.gg  gg_op_n58_s10_scale0_5_1272.csv  mosquito_density_map_env7.csv
code/utils/: cplex.hpp
instances/: README.md
instances/small_ip_instances/: README.md  gg_ip_size1000_type2b_37.csv  gg_ip_size1001_type2a_247.csv  gg_ip_size1001_type2b_11.csv  gg_ip_size1001_type2b_25.csv  gg_ip_size1001_type2b_91.csv  gg_ip_size1002_type2b_67.csv  gg_ip_size1003_type2b_76.csv  gg_ip_size1004_type2b_66.csv  gg_ip_size1005_type2a_265.csv  gg_ip_size1005_type2b_13.csv  gg_ip_size100_type2a_234.csv  gg_ip_size100_type2b_12.csv  gg_ip_size100_type2b_94.csv  gg_ip_size1010_type2b_55.csv  gg_ip_size1012_type2b_27.csv  gg_ip_size1014_type2a_269.csv  gg_ip_size101_type2b_77.csv  gg_ip_size1025_type2a_284.csv  gg_ip_size102_type2a_200.csv  gg_ip_size102_type2b_42.csv  gg_ip_size102_type2b_47.csv  gg_ip_size1030_type2a_282.csv  gg_ip_size1035_type2a_243.csv  gg_ip_size103_type2a_220.csv  gg_ip_size103_type2b_71.csv  gg_ip_size103_type2b_84.csv  gg_ip_size1047_type2a_362.csv  gg_ip_size1049_type2a_280.csv  gg_ip_size1053_type2a_357.csv  gg_ip_size1054_type2a_256.csv  gg_ip_size1055_type2a_307.csv  gg_ip_size1057_type2a_276.csv  gg_ip_size105_type2b_45.csv  gg_ip_size106_type2a_214.csv  gg_ip_size106_type2b_18.csv  gg_ip_size1089_type2a_245.csv  gg_ip_size108_type2b_57.csv  gg_ip_size1091_type2a_279.csv  gg_ip_size113_type2a_246.csv  (+339 more)
